[metadata]
name = deepmerge
description = a toolset to deeply merge python dictionaries.
long_description = file: README.rst
url = http://deepmerge.readthedocs.io/en/latest/
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
python_requires = >=3.*

[options.packages.find]
exclude =
    tests*
    *.tests*